update code practice

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,9 @@ target/
 #Ipython Notebook
 .ipynb_checkpoints
 .idea/**
+**/.idea/**
+
+.DS_Store
+Python/leetcode/abc-sequence.py
+test.py
+venv/
